# autonomy

./: .gitignore  .gitmodules  README.md  install.sh
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  _setup_util.py
devel/.private/darknet_ros/: .catkin  local_setup.sh  setup.sh
devel/.private/darknet_ros_msgs/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/fake_camera/: .catkin  local_setup.sh  setup.sh
devel/.private/mavlink_sitl_gazebo/: .catkin  setup.sh
devel/.private/video_converter/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/video_stream_opencv/: .catkin  .rosinstall  local_setup.sh
devel/include/darknet_ros_msgs/: BoundingBox.h  BoundingBoxes.h  CheckForObjectsAction.h  CheckForObjectsActionFeedback.h  CheckForObjectsActionGoal.h  (+5 more)
logs/darknet_ros/: build.check.000.log.stderr  build.check.002.log.stderr  build.cmake.000.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.004.log.stderr
logs/mavlink_sitl_gazebo/: build.cmake.000.log.stderr  build.cmake.002.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr
logs/video_stream_opencv/: build.check.002.log.stderr
src/: landing_zone_sizing.py  sensor_selection_obstacle.py
src/fake_camera/: CMakeLists.txt  setup.py
src/helpers/: path.py
src/path_generator/: error_plotter.py  fake_barometer.py  main.py
(+243 files in other folders)
